--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 //FUENTES::
 
 $font: 'Montserrat, sans-serif';
-$font-style-2: 'Catamaran',sans-serif, Medium, 1.6rem;
-$font-style: 'Poppins', sans-serif, Light, 1.4rem;
+$font-style-2: 500 1.6rem 'Catamaran',sans-serif;
+$font-style: 300 1.4rem 'Poppins', sans-serif;
 
 //COLORES:
 $white-50:rgba(255, 255, 255, 0.5);
