--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,7 +3,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    //font-size: 62.5%;
+    font-size: 62.5%;
     text-decoration: none;
 }
 
