--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -183,12 +183,12 @@
     text-align: center;
   }
   
-//    .info-autor .image {
-//      width: 100%;
-//      height: 100%;
-//      border-radius: 50%;
-//      border: .2rem solid #3e3e3e;
-//     }
+   .info-autor .image {
+     width: 100%;
+     height: 100%;
+     border-radius: 50%;
+     border: .2rem solid #3e3e3e;
+    }
 .img {
         display: flex;
         align-items: center;
@@ -196,9 +196,7 @@
         width: 7rem;
         height: 7rem;
         border: .2rem solid #3e3e3e;
-        background-image: url('../images/user.jpeg');
-        background-size: contain;
-        background-color: #c0b7e8;
+        
   }
   
   .info-autor .job {
