--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,47 +1,45 @@
 /* Aquí van tus estilos */
 
-
   @media (min-width: 769px) {
-
     .container {
       background-color: $dark;
-      width: 100vw; 
-      padding: 2rem;
+      height: fit-content;
+      width: 100vw;
+      padding: 1rem 2rem;
+      height: 100vh;
   }
-  
   .header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 75px;
   }
-  
   .header .text {
     color: $white;
   }
   .logoCool {
     width: 5rem;
   }
-  
   .main {
     display: flex;
-    padding-top: 50px;
+    padding-top: 10px;
     height: 80vh;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
+
   .main .title {
     color:$white;
     text-align: center;
   }
-  
   .main .ask-info {
-    padding: 20px;
     text-align: center;
     color: $white;
   }
-  
   .main .ask-info .subtitle {
     padding-bottom: 10px;
+    font-size: 1.8rem;
   }
-  
   .main .ask-info .line {
     width: 100%;
     border: 0;
@@ -56,24 +54,21 @@
   .input-mvl {
     width: 50%;
   }
-  
-  .main .preview {
-    width: 60%;
-  }
-  
   .main .form {
+    margin:0px;
     background-color: $dark;
-    width: 40%;
+    max-width: 40%;
+    padding: 20px;
+    height: 100%;
   }
-  
+
   .main .project,
   .main .autor {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     border: none;
+    gap:10px;
   }
-  
   .main .input,
   .textarea {
     background-color: $dark;
@@ -89,15 +84,14 @@
     color: $white;
     padding-top: 10px;
   }
-  
   .main .textarea {
     height: 110px;
   }
-  
   .main .buttons-img {
     text-align: center;
+    padding-top: 10px;
   }
-  
+
   .main .btn,
   .main .btn-large {
     width: 160px;
@@ -106,65 +100,55 @@
     text-align: center;
     border: none;
     height: 43px;
-    background: linear-gradient(90deg, #8176af -1.57%, #c0b7e8 98.43%);;
+    background: linear-gradient(90deg, #8176AF -1.57%, #C0B7E8 98.43%);;
     border-radius: 40px;
   }
-  
   .main .btn-large {
     width: 200px;
     border: solid 2px $white;
   }
-  
   .main .preview {
-    padding: 20px;
+    padding: 0px 20px;
+    max-width: 60%;
   }
-  
   .main .preview .image {
     object-fit: cover;
     width: 100%;
     height: 80%;
   }
-  
   .main .preview .autor {
     background-color: $white;
-    color: #3e3e3e;
+    color: #3E3E3E;
     width: 90%;
-    height: 50%;
-    transform: translateY(-100px);
+    height: fit-content;
+    transform: translateY(-150px);
     margin: auto;
     border-radius: 20px;
     display: flex;
     flex-direction: row-reverse;
-    gap: 40px;
     padding: 30px;
-    overflow-y: scroll;
+    // overflow-y: scroll;
   }
-  
   .info-autor {
     width: 40%;
     text-align: center;
   }
-  
   .info-autor .image {
     border-radius: 50%;
     width: 80px;
     height: 110px;
   }
-  
   .info-autor .job {
     font-weight: bold;
     color: $black-80;
     font-size: 14px;
   }
-  
   .info-autor .name {
     font-size: 16px;
   }
-  
   .info-project {
     width: 60%;
   }
-  
   .info-project .subtitle {
     font-size: 14px;
     text-align: center;
@@ -174,22 +158,18 @@
     color: $black-80;
     margin-bottom: 10px;
   }
-  
   .info-project .desc {
     font-size: 12px;
     margin-bottom: 10px;
     }
-  
   .info-project .slogan {
     font-size: 14px;
     margin-bottom: 10px;
   }
-  
   .info-project .line {
     width: 100%;
     border: 0;
     height: 1px;
-  
     background-image: linear-gradient(
       to right,
       rgba(255, 255, 255, 0),
@@ -197,19 +177,16 @@
       rgba(255, 255, 255, 0)
     );
   }
-  
   .btn-color {
     border-radius: 20px;
     width: 85px;
     height: 30px;
     font-weight: bold;
   }
-  
   .btn-color-dark {
     background-color: $black-80;
     color: $white;
   }
-  
   .technologies {
     background-color: lightgray;
     border-radius: 20px;
@@ -217,20 +194,19 @@
     padding: 10px;
     width: 70%;
   }
-  
   .card {
     color: $white;
     text-align: center;
     padding: 20px;
   }
-  
   .hidden {
     display: none;
   }
-  
   .icon{
     width: 16px;
   }
-
-
+  // .form2{
+  //   gap:0px;
+  // }
 }
+
