--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,9 +4,8 @@
     .container {
       background-color: $dark;
       height: fit-content;
-      width: 100vw;
       padding: 1rem 2rem;
-      height: 100vh;
+    
   }
   .header {
     display: flex;
@@ -23,7 +22,7 @@
   .main {
     display: flex;
     padding-top: 10px;
-    height: 80vh;
+    height: fit-content;
     flex-direction: row;
     flex-wrap: wrap;
   }
