--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,6 @@
 /* Aquí van tus estilos */
-@import '../styles/variables.scss';
+
+@import './variables.scss';
 
   @media (min-width: 769px) {
     .container {
