--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,8 +5,11 @@
   @media (min-width: 769px) {
     .container {
       background-color: $dark;
-      height: fit-content;
+      // height: 100vh;
       padding: 1rem 2rem;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: space-between;
     
   }
   .header {
@@ -27,6 +30,7 @@
     height: fit-content;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 
   .main .title {
@@ -58,9 +62,12 @@
   .main .form {
     margin:0px;
     background-color: $dark;
-    max-width: 40%;
+    max-width: 35%;
     padding: 20px;
     height: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 
   .main .project,
@@ -75,10 +82,11 @@
     background-color: $dark;
     border-color: $white;
     border-radius: 30px;
-    height: 42.72px;
+    height: 60px;
     color: $white;
     padding-left: 15px;
     padding-top: 5px;
+    margin-bottom: 0.5rem;
   }
   .main .input::placeholder,
   .textarea::placeholder {
@@ -115,18 +123,18 @@
   .main .preview .image {
     object-fit: cover;
     width: 100%;
-    height: 80%;
+    max-height: 80%;
   }
   .main .preview .autor {
     background-color: $white;
     color: #3E3E3E;
-    width: 90%;
+    max-width: 75%;
     height: fit-content;
     transform: translateY(-150px);
     margin: auto;
     border-radius: 20px;
     display: flex;
-    flex-direction: row-reverse;
+    // flex-direction: row-reverse;
     padding: 30px;
     // overflow-y: scroll;
   }
