--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,4 +1,6 @@
 @import './variables.scss';
+
+
 .container {
     background-color: $dark;
     padding: 1rem;
@@ -128,6 +130,10 @@
   
   .main .buttons-img {
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    gap:1rem;
+    justify-content: center;
   }
   
   .main .btn,
@@ -143,6 +149,7 @@
     height: 43px;
     background: linear-gradient(90deg, #8176af -1.57%, #c0b7e8 98.43%);;
     border-radius: 40px;
+    padding: 0.5rem;
   }
   
   .main .btn-large {
