Add card landing

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -82,7 +82,7 @@ gap: 1rem;
 
 
 
-.land-main {
+.landing-ul {
     padding: 2rem;
     background-color: $dark;
 }
@@ -204,7 +204,7 @@ width: 60%;
         height: 30%;
         padding: 2rem;
     }
-       .land-main{
+       .landing-ul{
         height: 60%;
         padding: 2rem;
         display: grid;
