fix landin scss

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -86,11 +86,16 @@ gap: 1rem;
     padding: 2rem;
     background-color: $dark;
 }
+
+.trashLi{
+    width: 3rem;
+    height: 3rem;
+  }
+
 .land-autor{
     background-color: $white;
     margin-bottom: 1rem;
     border-radius: 20px;
-    height: 350px;
     padding: .8rem;
     display: flex;
     flex-direction: row-reverse;
@@ -156,8 +161,8 @@ width: 60%;
 }
 
 .land-img {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     margin-bottom: 1rem;
     border-radius: 40%;
     border: 3px solid black;
@@ -207,29 +212,15 @@ width: 60%;
        .landing-ul{
         height: 60%;
         padding: 2rem;
-        display: grid;
-        grid-template-columns: 1fr, 1fr;
-        column-gap: 2rem;
-        justify-content: space-evenly;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 2rem;
     }
     .land-autor{
         width: 500px;
-        height: 400px;
     }
-    .autOne{
-        grid-column: 1/2;
-    }
-    .autTwo{
-        grid-column: 2/3;
-    }
-    .autThree{
-        grid-column: 1/2;
-    }
-    .autFour{
-        grid-column: 2/3;
-    }
-
-
     .land-footer{
         height: 10%;
         padding: 2rem;
