fix trash and landing

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,9 +1,10 @@
 @import '../styles/reset.scss';
 @import '../styles/variables.scss';
 
-
+.landing {
+    background-color: $dark;
+}
 .land-header {
-    height: 30vh;
     padding: 2rem;
     display: flex;
     flex-direction: column;
@@ -82,7 +83,6 @@ gap: 1rem;
 }
 
 .land-main{
-    height: 55vh;
     padding: 2rem;
     background-color: $dark;
 }
@@ -192,7 +192,7 @@ width: 60%;
 }
 
 .land-footer{
-    height: 10vh;
+    width: 100%;
     background-color: $dark;
     padding: 2rem;
     display: flex;
